# VeriAnim

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  VeriAnim_Academic_and_Evaluation_License_Agreement.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
benchmark/: README.md  ll3m_animbench.jsonl
blender/: __init__.py  addon.py  client.py  headless.py  ll3m_utils.py  verianim_utils.py
config/: __init__.py  config.yaml  loader.py
docs/: harness.md  ir.md  ir_audit.md  plan.md
docs/rag/: README.md  blender_api_changes.md  (+3 more)
harness/: __init__.py  agents.py  animation_repair.py  artifacts.py  blender_runtime.py  config.py  ir.py  llm.py  media_diagnostics.py  preflight.py  rag.py  runner.py  serde.py  session.py  static_support_repair.py  textures.py  tui.py
paper/: main.bbl  main.blg  main.tex  references.bib
scripts/: blender_socket_bind_smoke.py  create_animbench.py  diagnose_media_support.py  export_blend_from_python.py  generate_showroom.py  promote_run_to_showcase.py  reveal_to_pptx.py  start_ll3m_server.py  start_ll3m_server_gui.py  start_verianim_server.py  start_verianim_server_gui.py  summarize_execution_failures.py  summarize_runs.py
showcase/: README.md
slides/: README.md  build_reveal.py  deck.md  index.html
tests/: test_animation_ir_validation.py  test_animation_repair.py  test_generate_showroom.py  test_generated_code_sanitizer.py  test_media_diagnostics.py  test_promote_run_to_showcase.py  test_runner_config_and_blender_client.py  test_serde_and_llm.py  test_static_support_repair.py  test_textures.py
(+123 files in other folders)
